--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:spittle.t@gmail.com">E-Mail</a></li>
+	        		<li><a href="https://www.linkedin.com/in/tim-spittle-37a9b812">LinkedIn</a></li>
+				<li><a href="https://github.com/timspit">GitHub</a></li>
 				</ul>
 			</footer>
 		</body>
